# habits-backend

./: README.md  aaa. gql  aaa.ql  generate_data.py  pyproject.toml  schema.py
data/: README.md
github/: query.gql  variables.gql
